--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
             <strong id="labelRate">实时汇率：</strong>
             <span>1 USD = <input type="number" id="exchangeRate" value="6.97" step="0.01" style="width: 80px;" oninput="calculateTotal()"> CNY</span>
         </div>
+        <div style="font-size: 0.8rem; color: #7f8c8d; margin-top: 5px;">
+    最后更新：<span id="lastUpdate">2026-01-27</span>
+</div>
+
         <div class="input-group">
             <strong id="labelRisk">风险储备金：</strong>
             <span style="color: var(--warning-color); font-weight: bold;">+20%</span>
