--- a/index.html
+++ b/index.html
@@ -148,6 +148,19 @@
     <div class="note" id="footerNote">
         * 填写任意一列金额，另一列将自动根据汇率折算并计入总额。
     </div>
+
+    <footer style="margin-top: 40px; padding: 20px 0; border-top: 1px solid #eee; text-align: center;">
+    <p style="font-size: 0.85rem; color: #95a5a6; margin-bottom: 8px;">
+        © 2026 NudgeNow. All Rights Reserved.
+    </p>
+    <p style="font-size: 0.9rem; color: #34495e;">
+        <span style="margin-right: 15px;">Powered by <strong>NudgeNow Logic</strong></span>
+        <a href="mailto:hi@nudgenow.xyz" style="color: #3498db; text-decoration: none; border-bottom: 1px solid #3498db; padding-bottom: 2px;">
+            Get in touch →
+        </a>
+    </p>
+</footer>
+
 </div>
 
 <script>
